[package]
name = "gui"
version = "0.1.0"
authors = ["zhou.sebastien497@hotmail.fr <zhou.sebastien497@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
events_handling = {path = "../events_handling"}
graphics = { path = "../graphics" }

imgui = "*"
image = "*"
imgui-sys = "*"
imgui-glium-renderer = "*"
imgui-winit-support = "*"

nalgebra="*"
nalgebra-glm="*"
rand="*"